# Backupfile_TKDA

./: .env.example  .gitignore  HE_THONG_PIPELINE_01_KHOI_TAO_CAU_HINH.mmd  HE_THONG_PIPELINE_02_VAN_HANH_HANG_NGAY.mmd  HE_THONG_PIPELINE_03_LEADER_CHOT_CONG.mmd  HE_THONG_PIPELINE_04_BAO_CAO_CHAM_CONG_AUDIT.mmd  HE_THONG_PIPELINE_CHINH.mmd  HUONG_DAN_BAT_DAU_DU_AN_MOI.md  HUONG_DAN_CHAM_CONG_LEADER.md  MauChamCong.xlsx  README.md  ScanBackupManager.spec  ScanBackupService.spec  VAN_HANH_PRODUCT.md  main.py  mauimportNS.xlsx  pyproject.toml  requirements.txt  service_main.py
packaging/: build.ps1  installer.iss
scripts/: make_release_bundle.ps1  product_hardening_check.py  product_readiness_audit.ps1  release_smoke.ps1  seed_mock_data.py  service_admin_smoke.ps1  sign_release_artifacts.ps1  verify_release_bundle.ps1  write_release_manifest.ps1
src/scan_backup_manager/: __init__.py  __main__.py  backup.py  config_excel.py  constants.py  db.py  filesystem.py  i18n.py  logging_config.py  maintenance.py  mapfile.py  models.py  pdf_analysis.py  reports.py  service_core.py  statistics.py  windows_service.py
src/scan_backup_manager/ui/: app.py  date_format.py  kit.py  state.py  theme.py  workers.py
src/scan_backup_manager/ui/views/: audit.py  (+3 more)
tests/: test_assignment_gate.py  test_attendance_mausham.py  test_backup.py  test_config_excel.py  test_filesystem.py  test_i18n.py  test_mapfile_reports.py  test_product_hardening.py  test_product_pipeline.py  test_project_admin.py  test_project_management.py  test_service_core.py  test_statistics.py  test_system_mapfile.py
(+9 files in other folders)
